Se soluciona bug de overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body{
     padding: 0;
     color: #1d1d1d;
     font-family: 'helvetica-neue', sans-serif;
-    overflow: hidden;
 }
 
 header nav{
